--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: "Segoe UI", Arial, sans-serif;
             background: #f4f6f9;
             color: #333;
         }
@@ -19,21 +19,46 @@
             padding: 20px;
         }
 
-        h1, h2 {
+        /* HERO */
+        .hero {
+            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+            color: #fff;
+            padding: 50px 20px;
+            border-radius: 18px;
             text-align: center;
+            margin-bottom: 40px;
+        }
+
+        .hero h1 {
+            font-size: 40px;
             margin-bottom: 10px;
         }
 
-        h2 {
-            margin-top: 40px;
+        .hero p {
+            font-size: 18px;
+            opacity: 0.9;
         }
 
-        /* Profile section */
-        .profile {
+        .badges span {
+            display: inline-block;
+            background: rgba(255,255,255,0.15);
+            padding: 6px 16px;
+            border-radius: 20px;
+            margin: 6px;
+            font-size: 14px;
+        }
+
+        h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        /* Sections */
+        .profile, .details {
             background: #ffffff;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            padding: 25px;
+            border-radius: 14px;
+            box-shadow: 0 6px 16px rgba(0,0,0,0.12);
             margin-bottom: 40px;
         }
 
@@ -42,26 +67,26 @@
             font-size: 16px;
         }
 
-        .profile strong {
-            color: #000;
+        /* Reveal animation */
+        .reveal {
+            opacity: 0;
+            transform: translateY(40px);
+            transition: all 0.8s ease;
         }
 
-        /* Panel details */
-        .details {
-            background: #ffffff;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-            margin-bottom: 40px;
+        .reveal.active {
+            opacity: 1;
+            transform: translateY(0);
         }
 
+        /* Details list */
         .details ul {
-            margin: 0;
             padding-left: 20px;
         }
 
         .details li {
-            margin-bottom: 8px;
+            margin-bottom: 10px;
+            line-height: 1.6;
         }
 
         /* Gallery */
@@ -69,39 +94,67 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
+            margin-bottom: 40px;
         }
 
         .gallery img {
             width: 100%;
             height: 220px;
             object-fit: cover;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            border-radius: 14px;
+            cursor: pointer;
+            box-shadow: 0 6px 14px rgba(0,0,0,0.15);
+            transition: transform 0.3s ease;
         }
 
         .gallery img:hover {
-            transform: scale(1.05);
-            box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+            transform: scale(1.06);
+        }
+
+        /* Image Modal */
+        .modal {
+            display: none;
+            position: fixed;
+            inset: 0;
+            background: rgba(0,0,0,0.85);
+            justify-content: center;
+            align-items: center;
+            z-index: 999;
+        }
+
+        .modal img {
+            max-width: 90%;
+            max-height: 90%;
+            border-radius: 14px;
         }
 
         footer {
-            text-align: center;
-            padding: 20px;
             margin-top: 40px;
-            font-size: 14px;
-            color: #666;
+            padding: 20px;
+            text-align: center;
+            background: #111;
+            color: #aaa;
+            border-radius: 12px;
         }
     </style>
 </head>
-<body>
 
+<body>
 <div class="container">
 
-    <h1>Electrical Panel Project</h1>
+    <!-- HERO -->
+    <div class="hero">
+        <h1>⚡ Electrical Panel Project</h1>
+        <p>Industrial Star–Delta Starter Control Panel</p>
+        <div class="badges">
+            <span>3-Phase Supply</span>
+            <span>Industrial Grade</span>
+            <span>2024 Project</span>
+        </div>
+    </div>
 
-    <!-- Profile Section -->
-    <div class="profile">
+    <!-- Profile -->
+    <div class="profile reveal">
         <h2>Creator Details</h2>
         <p><strong>Name:</strong> Samarth Rajpoot</p>
         <p><strong>Title:</strong> Electrical Engineer (Graduated 2024)</p>
@@ -111,7 +164,7 @@
     </div>
 
     <!-- Panel Details -->
-    <div class="details">
+    <div class="details reveal">
         <h2>Panel Description</h2>
         <p><strong>Panel Type:</strong> Star Delta Starter</p>
         <p><strong>Supply:</strong> 3 Phase, 50 Hz</p>
@@ -126,33 +179,25 @@
 
         <p><strong>Accessories Used:</strong></p>
         <ul>
-            <li>MCCB</li>
-            <li>Contactors</li>
-            <li>Push Buttons</li>
-            <li>Indicator Lamps</li>
-            <li>Timer Relay</li>
-            <li>Protection Relay</li>
-            <li>SPPR</li>
-            <li>Energy Meter – ELMeasure LG6435</li>
-            <li>Morsun 12V DC SMPS</li>
-            <li>Terminal Blocks</li>
-            <li>Cable Manager</li>
-            <li>DIN Rail</li>
-            <li>CT Coils</li>
-            <li>Copper Control Wiring</li>
-            <li>Copper Load Wiring</li>
+            <li><strong>Protection & Control:</strong> MCCB, Protection Relay, Timer Relay, SPPR</li>
+            <li><strong>Switching Devices:</strong> Contactors</li>
+            <li><strong>Indication & Control:</strong> Push Buttons, Indicator Lamps</li>
+            <li><strong>Power & Measurement:</strong> Energy Meter (ELMeasure LG6435), CT Coils</li>
+            <li><strong>Power Supply:</strong> Morsun 12V DC SMPS</li>
+            <li><strong>Panel Accessories:</strong> Terminal Blocks, DIN Rail, Cable Manager</li>
+            <li><strong>Wiring:</strong> Copper Control Wiring, Copper Load Wiring</li>
         </ul>
     </div>
 
-    <!-- Image Gallery -->
+    <!-- Gallery -->
     <h2>Panel Images</h2>
-    <div class="gallery">
-        <img src="images/image1.jpeg" alt="Star Delta Panel Image 1">
-        <img src="images/image2.jpeg" alt="Star Delta Panel Image 2">
-        <img src="images/image3.jpeg" alt="Star Delta Panel Image 3">
-        <img src="images/image4.jpeg" alt="Star Delta Panel Image 4">
-        <img src="images/image5.jpeg" alt="Star Delta Panel Image 5">
-        <img src="images/image6.jpeg" alt="Star Delta Panel Image 6">
+    <div class="gallery reveal">
+        <img src="images/image1.jpeg" alt="Panel Image 1">
+        <img src="images/image2.jpeg" alt="Panel Image 2">
+        <img src="images/image3.jpeg" alt="Panel Image 3">
+        <img src="images/image4.jpeg" alt="Panel Image 4">
+        <img src="images/image5.jpeg" alt="Panel Image 5">
+        <img src="images/image6.jpeg" alt="Panel Image 6">
     </div>
 
 </div>
@@ -160,6 +205,38 @@
 <footer>
     © 2024 Samarth Rajpoot | Electrical Panel Project
 </footer>
+
+<!-- JAVASCRIPT -->
+<script>
+    // Scroll reveal
+    const reveals = document.querySelectorAll(".reveal");
+
+    window.addEventListener("scroll", () => {
+        reveals.forEach(section => {
+            const top = section.getBoundingClientRect().top;
+            if (top < window.innerHeight - 100) {
+                section.classList.add("active");
+            }
+        });
+    });
+
+    // Image modal
+    const modal = document.createElement("div");
+    modal.className = "modal";
+    modal.innerHTML = "<img>";
+    document.body.appendChild(modal);
+
+    document.querySelectorAll(".gallery img").forEach(img => {
+        img.addEventListener("click", () => {
+            modal.style.display = "flex";
+            modal.querySelector("img").src = img.src;
+        });
+    });
+
+    modal.addEventListener("click", () => {
+        modal.style.display = "none";
+    });
+</script>
 
 </body>
 </html>
